Metrike, AUC, ROC, matrice zabune - ispravljeno

--- a/Lucija_projekt2.ipynb
+++ b/Lucija_projekt2.ipynb
@@ -1574,6 +1574,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9a212af8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32586, 16)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "12c629e6",
    "metadata": {},
