--- a/projekt_3.ipynb
+++ b/projekt_3.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "## UZOP PROJEKT - TREĆI DIO\n",
-    "# Replikacija rezultata i poboljšanje"
+    "# Replikacija rezultata i poboljšanje\n",
+    "U ovom notebooku provedena je replikacija i proširenje rezultata iz odabranog znanstvenog članka. Analiza uključuje pripremu podataka, izgradnju i evaluaciju više modela strojnog učenja te usporedbu njihovih performansi pomoću standardnih metričkih i grafičkih prikaza."
    ]
   },
   {
@@ -473,6 +474,16 @@
    "metadata": {},
    "source": [
     "Kao što je navedeno u članku, podatke smo podijelili u omjeru 70/30. 70% podataka smo koristili kao skup za treniranje, a preostalih 30% kao skup za ispitivanje."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26c8667a",
+   "metadata": {},
+   "source": [
+    "## Modeliranje i evaluacija\n",
+    "\n",
+    "U nastavku su implementirani i evaluirani različiti modeli strojnog učenja. Svi modeli trenirani su na istom skupu podataka i evaluirani na istom testnom skupu kako bi usporedba bila pravedna. Za evaluaciju su korištene metrike točnosti, F1-mjere, ROC krivulje, AUC vrijednosti i matrice zabune.\n"
    ]
   },
   {
@@ -3320,6 +3331,24 @@
     "for c in classes_to_check_enc:\n",
     "    print(f\"\\n--- Evaluacija klase: {le.inverse_transform([c])[0]} vs Rest ---\")\n",
     "    evaluate_ovr(xgb_pipeline, X_test, y_test_enc, c)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93534f8b",
+   "metadata": {},
+   "source": [
+    "## Ograničenja analize\n",
+    "\n",
+    "Glavno ograničenje analize predstavlja neuravnoteženost klasa, osobito za ishode *Distinction* i *Fail*. Dodatno, modeli se temelje na agregiranim značajkama te ne uključuju vremensku dinamiku ponašanja studenata, što može ograničiti potencijal rane predikcije.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c61683c1",
+   "metadata": {},
+   "source": [
+    "## Zaključak\n"
    ]
   }
  ],
