--- a/projekt_3.ipynb
+++ b/projekt_3.ipynb
@@ -4453,6 +4453,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4b634ca",
+   "metadata": {},
+   "source": [
+    "**Distinction vs Rest**\n",
+    "\n",
+    "Za klasu Distinction XGBoost postiže visoku AUC vrijednost od 0.849, što ukazuje na vrlo dobru sposobnost rangiranja studenata s izvrsnim uspjehom, uz jasno odvajanje ROC krivulje od dijagonale. Unatoč tome, matrica zabune pokazuje velik broj lažno negativnih predikcija: od stvarnih Distinction primjera 788 je pogrešno klasificirano kao Rest, dok je samo 119 ispravno prepoznato, što upućuje na konzervativan prag odlučivanja.\n",
+    "\n",
+    "\n",
+    "**Fail vs Rest**\n",
+    "\n",
+    "Za klasu Fail XGBoost postiže AUC vrijednost od 0.727, što upućuje na umjerenu diskriminacijsku sposobnost, uz postupno, ali neizraženo odvajanje ROC krivulje od dijagonale. Matrica zabune pokazuje velik broj lažno negativnih predikcija: 1810 stvarnih Fail primjera klasificirano je kao Rest, dok je 306 ispravno prepoznato, a 340 lažno pozitivnih predikcija upućuje na povremenu pogrešnu identifikaciju drugih ishoda kao Fail.\n",
+    "\n",
+    "**Pass vs Rest**\n",
+    "\n",
+    "Za klasu Pass XGBoost postiže visoku AUC vrijednost od 0.823, što potvrđuje vrlo dobru diskriminacijsku sposobnost i pouzdano rangiranje ove klase. Matrica zabune pokazuje velik broj ispravno klasificiranih Pass primjera (2705), ali i znatan broj lažno pozitivnih predikcija (1541), što upućuje na dominantnost klase Pass i sklonost modela da je favorizira. Unatoč tome, Pass ostaje najstabilnija i najlakše predvidiva klasa za XGBoost.\n",
+    "\n",
+    "**Withdrawn vs Rest**\n",
+    "\n",
+    "Za klasu Withdrawn XGBoost postiže najvišu AUC vrijednost od 0.867, uz strm porast ROC krivulje pri niskim stopama lažno pozitivnih predikcija, što potvrđuje snažnu diskriminacijsku sposobnost. Matrica zabune pokazuje velik broj ispravno prepoznatih Withdrawn primjera (1808), uz umjeren broj lažno pozitivnih (535) i prisutne lažno negativne predikcije (1239). U odnosu na ostale klase, Withdrawn se pokazuje kao najlakša klasa za predikciju, a visoka AUC vrijednost potvrđuje prikladnost XGBoosta za ranu detekciju studenata sklonih povlačenju.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "93534f8b",
    "metadata": {},
    "source": [
